--- a/luke.html
+++ b/luke.html
@@ -33,32 +33,32 @@
                 <div class="artist">
                     <h3>KAYTRANADA</h3>
                     <img src="images/kaytranada.jpg" alt="KAYTRANADA performing on stage with colorful lights.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/70kdJnm1X6eEM8DbWa8Mnc?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="KAYTRANADA - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/70kdJnm1X6eEM8DbWa8Mnc?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
                     <h3>Mac Miller</h3>
                     <img src="images/macmiller.webp" alt="Mac Miller performing on stage with a microphone.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5bJ1DrEM4hNCafcDd1oxHx?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Mac Miller - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/5bJ1DrEM4hNCafcDd1oxHx?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
                     <h3>Frank Ocean</h3>
                     <img src="images/frankocean.webp" alt="Frank Ocean sitting and gazing thoughtfully into the distance.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2LMkwUfqC6S6qDVlEuzV?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Frank Ocean - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/2LMkwUfqC6S6qDVlEuzV?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
                     <h3>Jorja Smith</h3>
                     <img src="images/jorja.jpg" alt="Jorja Smith performing live with a mic, wearing an elegant black outfit.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6VFKuuqSbA1GpMEosUgTwQ?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Jorja Smith - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/6VFKuuqSbA1GpMEosUgTwQ?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
                     <h3>Kendrick Lamar</h3>
                     <img src="images/kendrick.avif" alt="Kendrick Lamar performing on stage in front of a crowd.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2g6tReTlM2Akp41g0HaeXN?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Kendrick Lamar - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/2g6tReTlM2Akp41g0HaeXN?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
                     <h3>Anderson .Paak</h3>
                     <img src="images/anderson.webp" alt="Anderson .Paak performing live, playing drums while singing.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4SBVWkRIMJ6WBCYPvr5Bwr?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Anderson .Paak - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/4SBVWkRIMJ6WBCYPvr5Bwr?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
         </section>
@@ -68,16 +68,17 @@
             <div class="grid">
                 <div class="myartist">
                     <h3>Kaytranada</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/439X8jGytErRiPnaoUJHju?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Kaytranada - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/439X8jGytErRiPnaoUJHju?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="myartist">
                     <h3>Mac Miller</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/39NDBdU5Xkm5pCFGa5kZtI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Mac Miller - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/39NDBdU5Xkm5pCFGa5kZtI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="myartist">
                     <h3>Frank Ocean</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/35xSkNIXi504fcEwz9USRB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Frank Ocean - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/35xSkNIXi504fcEwz9USRB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
+            </div>
         </section>
 
     </main>
