--- a/jack.html
+++ b/jack.html
@@ -33,32 +33,92 @@
                 <div class="artist">
                     <h3>Chris Stapleton</h3>
                     <img src="images/chrisstapleton.webp" alt="Chris Stapleton performing live.">
-                    <iframe title="Chris Stapleton - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/3fqwjXwUGN6vbzIwvyFMhx?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Chris Stapleton - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/3fqwjXwUGN6vbzIwvyFMhx?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Tyler Childers</h3>
                     <img src="images/tylerchilders.jpg" alt="Tyler Childers performing live.">
-                    <iframe title="Tyler Childers - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/0fCwTrRNfoNk962ati8n2K?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Tyler Childers - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/0fCwTrRNfoNk962ati8n2K?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Eric Church</h3>
                     <img src="images/ericchurch.jpg" alt="Eric Church performing live.">
-                    <iframe title="Eric Church - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/05ZACkzW8YbRq3eFgIfSNB?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Eric Church - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/05ZACkzW8YbRq3eFgIfSNB?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Zach Bryan</h3>
                     <img src="images/zachbryan.webp" alt="Zach Bryan in a candid outdoor shot.">
-                    <iframe title="Zach Bryan - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/4KULAymBBJcPRpk1yO4dOG?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Zach Bryan - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/4KULAymBBJcPRpk1yO4dOG?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Sturgill Simpson</h3>
                     <img src="images/sturgill.jpg" alt="Sturgill Simpson posing for a photo.">
-                    <iframe title="Sturgill Simpson - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/3M97fwKZfzvQ8xppMoQ7a0?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Sturgill Simpson - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/3M97fwKZfzvQ8xppMoQ7a0?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Margo Price</h3>
                     <img src="images/margo.webp" alt="Margo Price performing live.">
-                    <iframe title="Margo Price - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/6pSOUDjx25CP0Y4nAJEM3D?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Margo Price - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/6pSOUDjx25CP0Y4nAJEM3D?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
             </div>
         </section>
@@ -69,15 +129,45 @@
             <div class="grid">
                 <div class="myartist">
                     <h3>Chris Stapleton</h3>
-                    <iframe title="Chris Stapleton - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/178OI1A3qjROeFeh8lmNwW?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Chris Stapleton - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/178OI1A3qjROeFeh8lmNwW?utm_source=generator" 
+                        width="100%" 
+                        height="352" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="myartist">
                     <h3>Margo Price</h3>
-                    <iframe title="Margo Price - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/7FJLdFzxgi7biNdwoS9VnL?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Margo Price - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/7FJLdFzxgi7biNdwoS9VnL?utm_source=generator" 
+                        width="100%" 
+                        height="352" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="myartist">
                     <h3>Tyler Childers</h3>
-                    <iframe title="Tyler Childers - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/0fbR95FEaJUxiQYaqZZukv?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Tyler Childers - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/0fbR95FEaJUxiQYaqZZukv?utm_source=generator" 
+                        width="100%" 
+                        height="352" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
             </div>
         </section>
