--- a/luke.html
+++ b/luke.html
@@ -23,8 +23,8 @@
     
     <main id="main">
         <section class="overview">
-            <h1>How Lukes's Music Taste Has Impacted Me</h1>
-            <p>Luke's music taste blends hip-hop, R&B, and electronic genres, which I find remarkably similar to my own. When discussing his preferences for certain artists and genres, he emphasizes his appreciation for lyricism above other elements of a song. I feel the same way, which might explain why his music taste resonates so strongly with me. While the production of our preferred songs may differ, I believe it's our shared tendency to prioritize the message and story of a song over production or vocals that makes his music taste a greater influence on mine compared to others. </p>
+            <h2>How Luke's Music Taste Has Impacted Me</h2>
+            <p>Luke's music taste blends hip-hop, R&B, and electronic genres, which I find remarkably similar to my own. When discussing his preferences for certain artists and genres, he emphasizes his appreciation for lyricism above other elements of a song, which I feel the same way about. This might explain why his music taste resonates so strongly with me. While the production of our preferred songs may differ, it is our shared tendency to prioritize the message and story of a song over production or vocals that makes his music taste a greater influence on mine compared to others.</p>
         </section>
 
         <section class="artists">
@@ -46,14 +46,14 @@
                     <iframe title="Frank Ocean - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/2LMkwUfqC6S6qDVlEuzV?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
-                    <h3>Jorja Smith</h3>
-                    <img src="images/jorja.jpg" alt="Jorja Smith performing live with a mic, wearing an elegant black outfit.">
-                    <iframe title="Jorja Smith - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/6VFKuuqSbA1GpMEosUgTwQ?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                </div>
-                <div class="artist">
                     <h3>Kendrick Lamar</h3>
                     <img src="images/kendrick.avif" alt="Kendrick Lamar performing on stage in front of a crowd.">
                     <iframe title="Kendrick Lamar - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/2g6tReTlM2Akp41g0HaeXN?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+                <div class="artist">
+                    <h3>Jorja Smith</h3>
+                    <img src="images/jorja.jpg" alt="Jorja Smith performing live with a mic, wearing an elegant black outfit.">
+                    <iframe title="Jorja Smith - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/6VFKuuqSbA1GpMEosUgTwQ?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="artist">
                     <h3>Anderson .Paak</h3>
@@ -62,21 +62,22 @@
                 </div>
             </div>
         </section>
+        
         <section class="myartists">
             <h2>Some Songs that I Love:</h2>
-            <p> Here are a few songs that I love, two of which Luke introduced me to. I find myself gravitation to his music taste more than the others and I will often stalk his spotify playlists to discover new music.</p>
+            <p>Here are a few songs that I love, two of which Luke introduced me to. I find myself gravitating to his music taste more than the others and I often stalk his Spotify playlists to discover new music.</p>
             <div class="grid">
                 <div class="myartist">
                     <h3>Kaytranada</h3>
-                    <iframe title="Kaytranada - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/439X8jGytErRiPnaoUJHju?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Kaytranada - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/439X8jGytErRiPnaoUJHju?utm_source=generator" width="100%" height="352" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="myartist">
                     <h3>Mac Miller</h3>
-                    <iframe title="Mac Miller - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/39NDBdU5Xkm5pCFGa5kZtI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Mac Miller - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/39NDBdU5Xkm5pCFGa5kZtI?utm_source=generator" width="100%" height="352" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="myartist">
                     <h3>Frank Ocean</h3>
-                    <iframe title="Frank Ocean - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/35xSkNIXi504fcEwz9USRB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe title="Frank Ocean - Song Preview" style="border-radius:12px" src="https://open.spotify.com/embed/track/35xSkNIXi504fcEwz9USRB?utm_source=generator" width="100%" height="352" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
         </section>
