--- a/liv.html
+++ b/liv.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="jack.html">Jack</a></li>
                 <li><a href="luke.html">Luke</a></li>
-                <li><a href="liv.html"class="active">Liv</a></li>
+                <li><a href="liv.html" class="active">Liv</a></li>
             </ul>
         </nav>
     </header>
@@ -33,55 +33,144 @@
                 <div class="artist">
                     <h3>RÜFÜS DU SOL</h3>
                     <img src="images/rufusdelsol.webp" alt="RÜFÜS DU SOL members are shown standing in a field">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6CGMZijOAZvTXG21T8t6R0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="RÜFÜS DU SOL - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/6CGMZijOAZvTXG21T8t6R0?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Illenium</h3>
-                    <img src="images/illenium.webp" alt="The artist illenium is shown infront of a bright yellow and orange background.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6cLrGfKIIRHYQw7S0mCDhA?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <img src="images/illenium.webp" alt="The artist illenium is shown in front of a bright yellow and orange background.">
+                    <iframe 
+                        title="Illenium - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/6cLrGfKIIRHYQw7S0mCDhA?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Knock2</h3>
                     <img src="images/knock2.jpg" alt="The artist Knock2 is shown in an elevator.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3GPmn3HANnZTlEovc2J9nt?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Knock2 - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/3GPmn3HANnZTlEovc2J9nt?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
-                    <h3>Fred again</h3>
+                    <h3>Fred again...</h3>
                     <img src="images/fredagain.webp" alt="A black and white photo of the artist Fred again">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/561pBFcFL2Pwb9HPO9tU8J?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Fred again... - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/561pBFcFL2Pwb9HPO9tU8J?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Disco Lines</h3>
                     <img src="images/discolines.jpg" alt="Black and white photo of the artist Disco Lines">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0ymhaRjiCwNQzeQEjewE7F?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe 
+                        title="Disco Lines - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/0ymhaRjiCwNQzeQEjewE7F?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="artist">
                     <h3>Gorgon City</h3>
-                    <img src="images/gorgoncity.jpg" alt="Both memebrs of Gargon City standing next to eachother.">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/77VqW84V88aKD8Bi8CzEsP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <img src="images/gorgoncity.jpg" alt="Both members of Gorgon City standing next to each other.">
+                    <iframe 
+                        title="Gorgon City - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/77VqW84V88aKD8Bi8CzEsP?utm_source=generator" 
+                        width="100%" 
+                        height="152" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
             </div>
         </section>
 
         <section class="myartists">
             <h2>Some Songs that I Love:</h2>
-            <p> Here are a few tracks that I listen to all the time now. These are songs and artist that I would have never discovered or listened to without the influence of my sister on my music taste. I have even seen Fred again in concert with her!</p>
+            <p>Here are a few tracks that I listen to all the time now. These are songs and artists that I would have never discovered or listened to without the influence of my sister on my music taste. I have even seen Fred again... in concert with her!</p>
             <div class="grid">
                 <div class="myartist">
-                    <h3>Fred again</h3>
-                    <iframe style="border-radius:1px" src="https://open.spotify.com/embed/track/09Rv6ctDE0t9z8zk5FINg8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <h3>Fred again...</h3>
+                    <iframe 
+                        title="Fred again... - Song Preview" 
+                        style="border-radius:1px" 
+                        src="https://open.spotify.com/embed/track/09Rv6ctDE0t9z8zk5FINg8?utm_source=generator" 
+                        width="100%" 
+                        height="352" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="myartist">
-                    <h3>Fred again</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/61pyjiweMDS1h930OgS0XO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <h3>Fred again...</h3>
+                    <iframe 
+                        title="Fred again... - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/61pyjiweMDS1h930OgS0XO?utm_source=generator" 
+                        width="100%" 
+                        height="352" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
                 <div class="myartist">
-                    <h3>Rufus Du Sol</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5HGxLtYxTriF7mMiriSpaz?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <h3>RÜFÜS DU SOL</h3>
+                    <iframe 
+                        title="RÜFÜS DU SOL - Song Preview" 
+                        style="border-radius:12px" 
+                        src="https://open.spotify.com/embed/track/5HGxLtYxTriF7mMiriSpaz?utm_source=generator" 
+                        width="100%" 
+                        height="352" 
+                        frameBorder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                        loading="lazy">
+                    </iframe>
                 </div>
+            </div>
         </section>
-
-
     </main>
 
     <footer id="footer">
